--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# IBM notebooks since I don't know if i'm allowed to upload
+/ibm\ notebooks/
